# iRM_Embedded_2017

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  Doxyfile  Makefile  README.md  STM32F427IIHx_FLASH.ld  STM32F427xx.cmake  iRM_Embedded.ioc  iRM_Embedded.txt  iRM_Embedded.xml  iRM_Embedded_2017.ioc  iRM_Embedded_2017.txt  iRM_Embedded_2017.xml  mx.scratch  save_serial.py  st-link-v2-1.cfg  stm32f427.cfg
Configs/: bsp_config.h  lib_config.h
Inc/: FreeRTOSConfig.h  bsp_driver_sd.h  can.h  dma.h  fatfs.h  ffconf.h  gpio.h  i2c.h  main.h  mxconstants.h  sd_diskio.h  sdio.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Old_Src/: freertos.c  main.c
Old_Src/Old/: buzzer.c
Src/: adc.c  bsp_driver_sd.c  can.c  dma.c  fatfs.c  freertos.c  gpio.c  i2c.c  main.c  sd_diskio.c  sdio.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  tim.c  usart.c
tutorials/: COMPILE.md  DEBUG.md  FLASH.md
